[gd_scene load_steps=4 format=3 uid="uid://blljc7wgk1rbe"]

[ext_resource type="Script" path="res://scripts/screen.gd" id="1_pqixo"]
[ext_resource type="Texture2D" uid="uid://xvbpau76dycy" path="res://icon.svg" id="2_vkohp"]
[ext_resource type="Texture2D" uid="uid://dxlpmtvuwagwr" path="res://art/art-corner.png" id="3_3ukf2"]

[node name="screen" type="CanvasLayer"]
script = ExtResource("1_pqixo")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 166.0
offset_bottom = 40.0
scale = Vector2(5.28673, 16.7984)
color = Color(0.447059, 0.568627, 0.647059, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(5.28673, 16.7984)
color = Color(0.160784, 0.160784, 0.160784, 0.584314)

[node name="inputs" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="input2" type="Label" parent="inputs"]
offset_left = 19.0
offset_top = 90.0
offset_right = 295.0
offset_bottom = 113.0
scale = Vector2(0.845548, 0.828232)
text = "Inputs will be here"

[node name="input1" type="Label" parent="inputs"]
offset_left = 19.0
offset_top = 59.0
offset_right = 295.0
offset_bottom = 82.0
scale = Vector2(0.845548, 0.828232)
text = "Inputs will be here"

[node name="Label2" type="Label" parent="."]
offset_left = 19.0
offset_top = 29.0
offset_right = 295.0
offset_bottom = 52.0
scale = Vector2(0.460818, 0.460818)
text = "Inputs will be here"

[node name="Label3" type="Label" parent="."]
offset_left = 407.0
offset_top = 121.0
offset_right = 585.0
offset_bottom = 156.0
scale = Vector2(1.26996, 1.26996)
theme_override_font_sizes/font_size = 25
text = "CODEBREAKER"

[node name="Label" type="Label" parent="."]
offset_left = 332.0
offset_top = 215.0
offset_right = 608.0
offset_bottom = 238.0
scale = Vector2(1.35781, 1.35781)
text = "Choose 4 numbers between 1 and 6"

[node name="numbers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="number1" type="LineEdit" parent="numbers"]
layout_mode = 0
offset_left = 351.0
offset_top = 276.0
offset_right = 418.063
offset_bottom = 307.0

[node name="number2" type="LineEdit" parent="numbers"]
layout_mode = 0
offset_left = 441.0
offset_top = 277.0
offset_right = 508.063
offset_bottom = 308.0

[node name="number3" type="LineEdit" parent="numbers"]
layout_mode = 0
offset_left = 536.0
offset_top = 278.0
offset_right = 603.063
offset_bottom = 309.0

[node name="number4" type="LineEdit" parent="numbers"]
layout_mode = 0
offset_left = 628.0
offset_top = 278.0
offset_right = 695.063
offset_bottom = 309.0

[node name="wrong_place" type="Label" parent="."]
offset_left = 467.0
offset_top = 357.0
offset_right = 612.0
offset_bottom = 380.0
scale = Vector2(0.845548, 0.828232)
text = "Wrong place: 0"

[node name="right_place" type="Label" parent="."]
offset_left = 467.0
offset_top = 334.0
offset_right = 612.0
offset_bottom = 357.0
scale = Vector2(0.845548, 0.828232)
text = "Right place: 0"

[node name="send_numbers" type="Button" parent="."]
offset_left = 479.0
offset_top = 396.0
offset_right = 552.0
offset_bottom = 427.0
text = "Try"

[node name="settings_button" type="TextureButton" parent="."]
offset_left = 801.0
offset_top = 14.0
offset_right = 929.0
offset_bottom = 142.0
scale = Vector2(0.324262, 0.324262)
texture_normal = ExtResource("2_vkohp")

[node name="Art-corner" type="Sprite2D" parent="."]
position = Vector2(672, 462)
scale = Vector2(3.98045, 3.98045)
texture = ExtResource("3_3ukf2")

[node name="settings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="settings"]
offset_left = 28.0
offset_top = 10.0
offset_right = 192.0
offset_bottom = 50.0
scale = Vector2(4.97564, 15.8099)
color = Color(0.313726, 0.411765, 0.533333, 1)

[node name="Label3" type="Label" parent="settings"]
offset_left = 357.0
offset_top = 48.0
offset_right = 487.0
offset_bottom = 83.0
scale = Vector2(1.26996, 1.26996)
theme_override_font_sizes/font_size = 25
text = "SETTINGS"

[node name="back_button" type="TextureButton" parent="settings"]
offset_left = 783.0
offset_top = 29.0
offset_right = 911.0
offset_bottom = 157.0
scale = Vector2(0.324262, 0.324262)
texture_normal = ExtResource("2_vkohp")

[connection signal="pressed" from="send_numbers" to="." method="_on_send_numbers_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="settings/back_button" to="." method="_on_back_button_pressed"]
